Altering puc-rio to top-middle

--- a/_config.yml
+++ b/_config.yml
@@ -18,14 +18,7 @@ darkmode: false
 twitter_username: nicothedev
 github_username:  nicopaes
 # stackoverflow_username: "00000001"
-# dribbble_username: jekyll
-# facebook_username: jekyll
-# flickr_username: jekyll
 linkedin_username: nicolaspleme
-# xing_username: jekyll
-# pinterest_username: jekyll
-# youtube_username: globalmtb
-# orcid_username: 0000-0000-0000-0000
 
 # Additional icon links
 additional_links:
@@ -36,11 +29,6 @@ additional_links:
 #   icon: font awesome brand icon name (eg. fab fa-twitter) (https://fontawesome.com/icons?d=gallery&m=free)
 #   url: Link url (eg. https://google.com)
 
-# Google Analytics and Tag Manager
-# Using more than one of these may cause issues with reporting
-# gtm: "GTM-0000000"
-# gtag: "UA-00000000-0"
-# google_analytics: "UA-00000000-0"
 
 # About Section
 # about_title: About Me
@@ -78,7 +66,7 @@ content:
   - title: Formação Acadêmica # Title for the section
     layout: list # Type of content section (list/text)
     content:
-      - layout: left
+      - layout: top-middle
         title: PUC-Rio, 
         caption: Formatura 2022   
         sub_title: Bacharel em Ciência da Computação 
